# fontspector

./: .gitignore  .gitmodules  AUTHORS.txt  CONTRIBUTORS.txt  Cargo.toml  README.md  port_check.py
fontbakery-bridge/: Cargo.toml
fontbakery-bridge/src/: checks.rs  lib.rs  test.rs
fontspector-checkapi/: Cargo.toml
fontspector-checkapi/src/: check.rs  checkresult.rs  codetesting.rs  constants.rs  context.rs  filetype.rs  font.rs  gsub.rs  lib.rs  pens.rs  profile.rs  registry.rs  status.rs  testable.rs  utils.rs
fontspector-cli/: Cargo.toml
fontspector-cli/src/: args.rs  main.rs
fontspector-cli/src/reporters/: json.rs  markdown.rs  mod.rs  terminal.rs
fontspector-py/: Cargo.toml  pyproject.toml
fontspector-py/data/test/cabin/: bad-METADATA.pb
fontspector-py/data/test/familysans/: bad-METADATA.pb
fontspector-py/data/test/notosanskhudawadi/: METADATA.pb
fontspector-py/src/: lib.rs
fontspector-py/tests/: conftest.py  test_check_varfont_STAT_axis_record_for_each_axis.py  test_check_weight_class_fvar.py  test_checks_cjk.py  test_checks_color.py  test_checks_contour_count.py  test_checks_empty_letters.py  test_checks_filesize.py  test_checks_freetype_rasterizer.py  test_checks_glyf.py  test_checks_glyphset.py  test_checks_googlefonts.py  test_checks_gpos_kerning_info.py  test_checks_hinting.py  test_checks_layout.py  test_checks_ligature_carets.py  test_checks_name.py  test_checks_no_debugging_tables.py  test_checks_opentype_GDEF.py  test_checks_opentype_STAT_ital_axis.py  test_checks_opentype_fvar.py  test_checks_opentype_gdef.py  test_checks_opentype_glyf.py  test_checks_opentype_gpos.py  test_checks_opentype_head.py  test_checks_opentype_hhea.py  test_checks_opentype_loca.py  test_checks_opentype_name.py  test_checks_opentype_os2.py  test_checks_opentype_post.py  test_checks_opentype_stat.py  test_checks_outline.py  test_checks_shaping.py  test_checks_tabular_glyphs.py  test_checks_universal.py  test_checks_unreachable_glyphs.py  test_checks_unwanted_aat_tables.py  test_checks_varfont.py  test_coverage.py
fontspector-universal/: Cargo.toml
fontspector-universal/src/: lib.rs
fontspector-universal/src/checks/: bold_italic_unique.rs  required_tables.rs
fontspector-web/: Cargo.toml  README.md  test.js
fontspector-web/src/: lib.rs
fontspector-web/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  webworker.js
profile-designspace/: Cargo.toml
profile-designspace/src/: lib.rs
profile-googlefonts/: Cargo.toml  build.rs
profile-googlefonts/resources/: vendor_ids.txt
profile-googlefonts/src/: constants.rs  description.rs  family.rs  lib.rs  license.rs  metadata.rs  metadata_copyright.rs  metadata_license.rs  metadata_subsets_correct.rs  network_conditions.rs  use_typo_metrics.rs  utils.rs
profile-googlefonts/src/checks/: axes_match.rs  color_fonts.rs  dotted_circle.rs  fstype.rs  fvar_instances.rs  googlefonts_weightclass.rs  metadata_date_added.rs  mod.rs  name_description_max_length.rs  soft_dotted.rs  tofu.rs  weightclass.rs
profile-googlefonts/src/checks/description/: min_length.rs
profile-googlefonts/src/checks/family/: equal_codepoint_coverage.rs
profile-googlefonts/src/checks/googlefonts/: axes_match.rs  canonical_filename.rs  color_fonts.rs  font_copyright.rs  font_names.rs  fvar_instances.rs  gasp.rs  glyph_coverage.rs  has_ttfautohint_params.rs  mod.rs  old_ttfautohint.rs  render_own_name.rs  tofu.rs  unitsperem.rs  use_typo_metrics.rs  vendor_id.rs  version_bump.rs  vertical_metrics.rs
profile-googlefonts/src/checks/metadata/: can_render_samples.rs  copyright.rs  license.rs  subsets_correct.rs  validate.rs
profile-googlefonts/src/checks/name/: description_max_length.rs
profile-googlefonts/src/checks/outline/: alignment_miss.rs  colinear_vectors.rs  direction.rs  jaggy_segments.rs  mod.rs  overlapping_path_segments.rs  semi_vertical.rs  short_segments.rs
profile-googlefonts/src/checks/shaping/: forbidden.rs  mod.rs  regression.rs  schema.rs
profile-opentype/: Cargo.toml
profile-opentype/src/: bezglyph.rs  lib.rs
profile-opentype/src/checks/: alt_caron.rs  bold_italic_unique.rs  fvar.rs  gdef.rs  gdef_non_mark_chars.rs  glyf.rs  gpos.rs  head.rs  hhea.rs  italic_angle.rs  kern.rs  layout.rs  loca_maxp.rs  mod.rs  monospaced.rs  name.rs  os2.rs  post.rs  required_tables.rs  stat.rs
profile-opentype/src/checks/opentype/: GDEF_mark_chars.rs  GDEF_non_mark_chars.rs  GDEF_spacing_marks.rs  caret_slope.rs  code_pages.rs  family_naming_recommendations.rs  font_version.rs  fsselection.rs  glyf_non_transformed_duplicate_components.rs  glyf_unused_data.rs  italic_angle.rs  layout_valid_feature_tags.rs  layout_valid_language_tags.rs  layout_valid_script_tags.rs  mac_style.rs  maxadvancewidth.rs  mod.rs  monospace.rs  points_out_of_bounds.rs  post_table_version.rs  postscript_name.rs  slant_direction.rs  unitsperem.rs  vendor_id.rs  weight_class_fvar.rs  xavgcharwidth.rs
profile-testplugin/: Cargo.toml
profile-testplugin/src/: lib.rs
profile-universal/: Cargo.toml
profile-universal/data/: desired_glyph_data.json
profile-universal/src/: lib.rs
profile-universal/src/checks/: STAT_in_statics.rs  STAT_strings.rs  alt_caron.rs  arabic_high_hamza.rs  arabic_spacing_symbols.rs  base_has_width.rs  bold_italic_unique.rs  case_mapping.rs  cjk_chws_feature.rs  cjk_not_enough_glyphs.rs  cmap_format_12.rs  code_pages.rs  color_cpal_brightness.rs  colorfont_tables.rs  consistent_axes.rs  contour_count.rs  control_chars.rs  dsig.rs  empty_glyph_on_gid1_for_colrv0.rs  empty_letters.rs  family_vertical_metrics.rs  family_win_ascent_and_descent.rs  file_size.rs  fontdata_namecheck.rs  freetype_rasterizer.rs  fvar.rs  fvar_name_entries.rs  glyf.rs  glyf_nested_components.rs  glyphnames.rs  glyphset.rs  gpos7.rs  gpos_kerning_info.rs  head.rs  hhea.rs  hinting_impact.rs  integer_ppem_if_hinted.rs  interpolation_issues.rs  layout.rs  legacy_accents.rs  (+45 more)
profile-universal/src/checks/name/: char_restrictions.rs  family_and_style_max_length.rs  italic_names.rs  mod.rs  no_copyright_on_description.rs  (+1 more)
src/: check.rs  (+5 more)
(+92 files in other folders)
