[workspace]
resolver = "2"

members = [
    "fontspector-cli",
    "fontspector-checkapi",
    "fontspector-checkhelper",
    "profile-opentype",
    "profile-universal",
    "profile-testplugin",
    "profile-googlefonts",
    "fontspector-web",
    "fontbakery-bridge",
    "fontspector-py",
]

default-members = ["fontspector-cli"]

[workspace.dependencies]
pluginator = "1.0.1"

# Font-related deps
read-fonts = "0.19.3"
skrifa = "0.19.3"
write-fonts = "0.27.0"
font-types = "0.5.5"

# Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
fontspector-checkhelper = { path = "./fontspector-checkhelper" }

log = "0.4.14"

# Fontbakery bridge / Python module
pyo3 = "0.22"