[workspace]
resolver = "2"

members = [
    "fontspector-cli",
    "fontspector-checkapi",
    "fontspector-checkhelper",
    "profile-opentype",
    "profile-universal",
    "profile-testplugin",
    "profile-googlefonts",
    "fontspector-web",
    "fontbakery-bridge",
    "fontspector-py",
]

default-members = ["fontspector-cli"]

[workspace.dependencies]
pluginator = "1.0.1"

# Font-related deps
read-fonts = "0"
write-fonts = "0.34.0"
skrifa = "0"
# Don't use font-types! Use the re-exported types from read-fonts instead.
unicode-properties = "0.1.3"

# Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
fontspector-checkhelper = { path = "./fontspector-checkhelper" }

log = "0.4.14"
itertools = "0.13.0"

# Fontbakery bridge / Python module
pyo3 = "0.22"

indexmap = { version = "2", features = ["serde"] }
markdown-table = "0.2.0"
kurbo = "0.11" # For italic angle check
