[package]
name = "fontbakery-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
pyo3 = "0.22"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = {workspace = true}