[package]
name = "fontspector-checkapi"
version = "0.1.0"
edition = "2021"

[dependencies]
read-fonts = {workspace = true}
skrifa = {workspace = true}

# Filetype
glob-match = "0.2.1"
glob="0.3.1"

# Needed so that we can refer to status codes on the command line
clap = {version = "3.2.5", features = ["derive"]}

# Plugin architecture
pluginator = {workspace = true}

# Serializing and deserializing profiles
toml = "0.8.14"
serde = { workspace = true }

# Storing configuration
serde_json = "1.0"
