[package]
name = "fontspector-checkapi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }

[dependencies]
read-fonts = { workspace = true }
write-fonts = { workspace = true }
skrifa = { workspace = true }
fontspector-checkhelper = { workspace = true }
log = { workspace = true }

indexmap = { version = "2", features = ["serde"] }
# Filetype
glob-match = "0.2.1"
glob = "0.3.1"

# Needed so that we can refer to status codes on the command line
clap = { version = "3.2.5", features = ["derive"] }

# Serializing and deserializing profiles
toml = "0.8.14"
serde = { workspace = true }

# Storing configuration
serde_json = "1.0"

itertools = {workspace = true }
