[package]
name = "fontspector"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
description = "Quality control for OpenType fonts"
repository = "https://github.com/simoncozens/fontspector"
license = "Apache-2.0"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
# These profiles are baked-in
profile-universal = { path = "../profile-universal" }
profile-googlefonts = { path = "../profile-googlefonts" }
pluginator = { workspace = true }
clap = {version = "3.2.5", features = ["derive"]}
itertools = "0.10.0"
log = "0.4.14"
env_logger = "0.8"
rayon = "1.0.1"
indicatif = {version = "0", features = ["rayon"]}

# Terminal reporter
termimad = "0.14"
colored = "2.1.0"

# JSON reporter
serde = { workspace = true}
serde_json = "1.0"

# Markdown/HTML reporters
tera = "1.20.0"