[package]
name = "fontspector"
version = "0.1.0"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
description = "Quality control for OpenType fonts"
repository = "https://github.com/simoncozens/fontspector"
license = "Apache-2.0"

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi", features =["clap"] }
# These profiles are baked-in
fontbakery-bridge = { path = "../fontbakery-bridge" }
profile-universal = { path = "../profile-universal" }
profile-opentype = { path = "../profile-opentype" }
profile-googlefonts = { path = "../profile-googlefonts" }
clap = { version = "4", features = ["derive"] }
itertools = { workspace = true }
log = { workspace = true }
env_logger = "0.8"
rayon = "1.0.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Terminal reporter
termimad = "0"
colored = "2.1.0"

# JSON reporter
serde = { workspace = true }
serde_json = { workspace = true }

# Markdown/HTML reporters
tera = { version = "1.20.0", default-features = false}
