[package]
name = "profile-designspace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
norad = "0.14.2"
serde_json = "1.0.68"
quick-xml = { version = "0.36.0", features = ["serialize"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = { workspace = true }
