[package]
name = "profile-googlefonts"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies]
chrono = "0.4.38"                                           # For metadata date checks
fontspector-checkapi = { path = "../fontspector-checkapi" }
google-fonts-languages = "0"
google-fonts-subsets = "0"
itertools = { workspace = true }
protobuf = "3.7.1"
read-fonts = { workspace = true }
write-fonts = { workspace = true }
regex = "1.10.6"
skrifa = { workspace = true }
serde_json = { workspace = true }

unicode-properties = { workspace = true }
unicode-normalization = "0"
[build-dependencies]
protobuf-codegen = "3.7.1"
