[package]
name = "profile-googlefonts"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dependencies]
chrono = "0.4.38" # For metadata date checks
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
google-fonts-axisregistry = { git = "https://github.com/googlefonts/axisregistry", branch = "rust-crate" }
google-fonts-languages = "0"
google-fonts-subsets = "0"
indexmap = { workspace = true }
itertools = { workspace = true }
markdown-table = { workspace = true }
protobuf = "3.7.1"
read-fonts = { workspace = true }
regex = "1.10.6"
serde_json = { workspace = true }
skrifa = { workspace = true }
kurbo = { workspace = true }

unicode-normalization = "0"
unicode-properties = { workspace = true }
write-fonts = { workspace = true }
hashbrown = "0.15.2"

[build-dependencies]
protobuf-codegen = "3.7.1"
