[package]
name = "profile-googlefonts"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
glob = "0.3.2"
serde = { workspace = true }                            # For reading shaping check JSON files
rustybuzz = "0.20.1"

[dependencies]
chrono = "0.4.38" # For metadata date checks
fontspector-checkapi = { path = "../fontspector-checkapi", features = [
    "kurbo",
] }
google-fonts-axisregistry = { git = "https://github.com/googlefonts/axisregistry" }
google-fonts-languages = "0"
google-fonts-subsets = "0"
google-fonts-glyphsets = { git = "https://github.com/googlefonts/glyphsets" }
indexmap = { workspace = true }
itertools = { workspace = true }
markdown-table = { workspace = true }
protobuf = "3.7.1"
read-fonts = { workspace = true }
regex = "1.10.6"
serde_json = { workspace = true }
skrifa = { workspace = true }
kurbo = { workspace = true }
log = { workspace = true }
num-traits = "0.2.19"
similar = "2.7.0" # For shaping check reports, OFL body diff

unicode-normalization = "0"
unicode-properties = { workspace = true }
unicode-canonical-combining-class = "1.0.0"
yeslogic-unicode-blocks = "0.2.0"
write-fonts = { workspace = true }
hashbrown = "0.15.2"

scraper = { version = "0.22.0", default-features = false, features = [
    "errors",
] }
semver = "1.0.25"

[build-dependencies]
protobuf-codegen = "3.7.1"
