[package]
name = "profile-testplugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
toml = "0.8.14"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Plugin architecture
pluginator = {workspace = true}