[package]
name = "profile-universal"
version = "0.1.0"
edition = "2021"
authors =  [
    "Simon Cozens <simon@simon-cozens.org>",
    "Felipe Sanches <juca@members.fsf.org>",
]

[dependencies]
fontspector-checkapi = { path = "../fontspector-checkapi" }
fontspector-checkhelper = { workspace = true }
read-fonts = {workspace = true}
write-fonts = {workspace = true}
skrifa = {workspace = true}
itertools = "0.13.0"
unicode-properties = { workspace = true }
unicode_names2 = "0.6.0"
markdown-table = "0.2.0"
